<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/login_padding_sides"
    style="@style/background_default_gradient"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/zing_image"
        android:layout_width="@dimen/splash_icon_dimens_mini"
        android:layout_height="@dimen/splash_icon_dimens_mini"
        android:layout_gravity="center"
        android:src="@drawable/quellevo_icon"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/sign_up_edittext_height"
        android:background="@drawable/shape_login_button"
        android:id="@+id/login_email_edittext_id"
        android:hint="@string/sign_up_email_hint"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/edittext_left_padding"
        android:textSize="18sp"
        android:layout_marginBottom="@dimen/sign_up_margin_bottom"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@+id/login_password_edittext_id"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/sign_up_edittext_height"
        android:background="@drawable/shape_login_button"
        android:id="@+id/login_password_edittext_id"
        android:hint="@string/sign_up_password_hint"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/edittext_left_padding"
        android:textSize="18sp"
        android:layout_marginBottom="@dimen/login_up_margin_bottom"
        android:inputType="textPassword"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_up_margin_bottom"

        >



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingRight="2dp"
            android:id="@+id/login_forgot_password"
            android:text="@string/login_forgot_password"
            android:textColor="@color/white"
            android:visibility="gone"
            android:layout_gravity="right|center"
            />
    </FrameLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/login_sign_in"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/create_account_shape"
        android:id="@+id/login_sign_in_button"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="@dimen/login_button_sing_up_height"
            android:layout_marginLeft="@dimen/login_padding_sides_sign_up_button"
            android:layout_marginRight="@dimen/login_padding_sides_sign_up_button"
            android:background="@drawable/create_account_shape"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:id="@+id/login_dont_have_account_button_id"
            android:layout_gravity="bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_an_account"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="right"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

    </FrameLayout>


</LinearLayout>